--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     androidTestCompile('com.android.support:support-annotations:26.1.0') {
         force = true
     }
+    compile 'com.android.support:recyclerview-v7:26.1.0'
 
     // libraries
     implementation 'de.hdodenhof:circleimageview:3.0.0'
