--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,8 @@ dependencies {
 
     // libraries
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    compile 'com.google.android.gms:play-services-maps:11.0.2'
+    compile 'com.google.android.gms:play-services-location:11.0.2'
     compile 'com.github.ome450901:SimpleRatingBar:1.4.2'
+
 }
