--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.0.2'
     compile 'com.google.android.gms:play-services-location:11.0.2'
     compile 'com.github.ome450901:SimpleRatingBar:1.4.2'
+    compile 'com.github.javiersantos:BottomDialogs:1.2.1'
 
 }
