--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.0.2'
     compile 'com.github.ome450901:SimpleRatingBar:1.4.2'
     compile 'com.github.javiersantos:BottomDialogs:1.2.1'
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
 
 }
